--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@root/greenlock": "^4.0.5",
     "commander": "^9.0.0",
-    "domain-config-formatter": "github:formula1/domain-config-formatter",
+    "domain-config-formatter": "github:formula1/domain-config-formatter#compiled",
     "greenlock-express": "^4.0.3",
     "http-proxy": "^1.18.1",
     "moment": "^2.29.1"
