Code Clean: moved unused code to its own folder. Perhaps i might find it useful later

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     "noImplicitAny": true,
     "resolveJsonModule": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "unused"]
 }
