--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "https-proxy",
+  "name": "hostname-resolver-proxy",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
